# pm

./: .gitignore  astro.config.ts  drizzle.config.ts  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tailwind.config.ts  tsconfig.json  uno.config.ts  vite.config.ts
.astro/: data-store.json  settings.json
.cursor/rules/: typescript-rules.mdc
src/: BetterSwitch.tsx  bindings.ts  component.ts  date.ts  db.ts  elements.ts  error.ts  html.test.ts  html.ts  identifiers.ts  index.tsx  localStorage.ts  logger.ts  main.ts  stack.ts  styles.css  tags.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 0000_handy_kitty_pryde.sql
src-tauri/migrations/meta/: 0000_snapshot.json  _journal.json
src-tauri/src/: app.rs  error.rs  files.rs  git.rs  javascript.rs  lib.rs  main.rs  migrations.rs  project.rs
src-tauri/src/commands/: mod.rs
src/components/: DeleteAllButton.ts  ExternalLink.ts  Icon.ts  Icon.tsx  InfoRow.tsx  Layout.tsx  ProjectCard.ts  ProjectFolderCard.ts  SearchInput.ts  Sidebar.tsx  StackRoot.tsx  Topbar.tsx
src/components/layouts/: App.ts  Screen.astro
src/components/screens/: Home.ts  Project.ts
src/components/stats/: SpaceAvailableToFreeStat.ts  UncommitedChangesStat.ts
src/consola/: consola.test.ts  consola.ts
src/consola/reporters/: basic.ts  reporter.ts
src/entities/: box.ts
src/entities/project/: git.ts  gleam.ts  godot.ts  javascript.ts  project-box.ts  project-metadata.ts  project-queries.ts  project.ts  rust.ts
src/file/: LastModifiedFilesSection.tsx  fileHelpers.ts
src/git/: GitDataSection.tsx  gitCommands.ts
src/intera/: config.ts  dom.ts  elements.ts  intera.ts
src/navigation/: navigation.ts  stacks.ts
src/pages/: Home.tsx  index.astro  project.astro
src/project/: ProjectFileTree.tsx  ProjectListWithChanges.tsx  ProjectSection.tsx  ProjectSpec.ts  ProjectView.tsx  javascriptSpec.ts  projectHelpers.ts
src/projects/: file.ts  project.ts
src/schemas/: index.ts  project-schema.ts
src/services/: dependencies.ts  params.ts
src/signal/: classNames.ts  index.ts  signal.ts
src/ui/: App.ui.ts  Button.ui.ts  FileTree.ui.ts  Sidebar.ui.ts  Text.ui.ts  Topbar.ui.ts  View.ui.ts
src/utils/: editor.ts  files.ts  git.ts  github.ts  map.ts  zod.ts
(+8 files in other folders)
