[package]
name = "pm"
version = "0.0.0"
description = "A Tauri App"
authors = [ "you" ]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "shell-sidecar", "shell-execute", "macos-private-api", "window-start-dragging", "window-minimize", "window-maximize", "window-unminimize", "window-unmaximize", "window-close", "fs-read-file", "fs-exists", "path-all", "fs-read-dir", "shell-open" ] }
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-fs-extra = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
git2 = "0.19.0"
specta = "1"
tauri-specta = { version = "1", features = ["typescript"] }
thiserror = "1.0.61"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
